--- a/package.json
+++ b/package.json
@@ -12,5 +12,48 @@
   "engines": {
     "node": "0.12.x",
     "npm": "2.13.x"
+  },
+  "dependencies": {
+    "12factor-config": "^1.0.0",
+    "express": "4.x",
+    "express-http-proxy": "^0.6.0",
+    "i18next": "^1.9.0",
+    "jquery": "^2.1.1",
+    "morgan": "^1.5.0",
+    "serve-static": "^1.7.1",
+    "underscore": "~1.8.0"
+  },
+  "devDependencies": {
+    "bower": "1.4.x",
+    "browserify": "^10.2.6",
+    "browserify-ngannotate": "^1.0.1",
+    "browserify-shim": "^3.8.0",
+    "chai": "^3.0.0",
+    "chai-as-promised": "^5.1.0",
+    "glob": "^5.0.5",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-jshint": "^0.11.1",
+    "grunt-contrib-less": "^1.0.0",
+    "grunt-contrib-uglify": "^0.9.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-filerev": "^2.1.2",
+    "jshint-stylish": "^2.0.0",
+    "karma": "^0.13.0",
+    "karma-chai": "^0.1.0",
+    "karma-chai-as-promised": "^0.1.2",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-cli": "0.1.0",
+    "karma-mocha": "^0.2.0",
+    "karma-mocha-reporter": "^1.0.2",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "karma-sinon": "^1.0.4",
+    "matchdep": "^0.3.0",
+    "mocha": "^2.0.1",
+    "phantomjs": "^1.9",
+    "sinon": "^1.12.1",
+    "sinon-chai": "^2.6.0",
+    "watchify": "^3.1.0"
   }
 }
