--- a/package.json
+++ b/package.json
@@ -40,17 +40,9 @@
     "grunt-contrib-uglify": "^0.9.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.1.2",
-    "grunt-karma": "^0.12.0",
+    "grunt-mocha": "^0.4.11",
+    "grunt-mocha-test": "^0.12.4",
     "jshint-stylish": "^2.0.0",
-    "karma": "^0.13.0",
-    "karma-chai": "^0.1.0",
-    "karma-chai-as-promised": "^0.1.2",
-    "karma-chai-sinon": "^0.1.5",
-    "karma-cli": "0.1.0",
-    "karma-mocha": "^0.2.0",
-    "karma-mocha-reporter": "^1.0.2",
-    "karma-phantomjs-launcher": "^0.2.0",
-    "karma-sinon": "^1.0.4",
     "matchdep": "^0.3.0",
     "mocha": "^2.0.1",
     "phantomjs": "^1.9",
