--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "scripts": {
     "postinstall": "./node_modules/.bin/bower install",
+    "start": "node bin/app.js",
     "test": "./node_modules/.bin/grunt test"
   },
   "engines": {
@@ -19,6 +20,7 @@
     "express": "4.x",
     "express-http-proxy": "^0.6.0",
     "i18next": "^1.9.0",
+    "jade": "^1.3.1",
     "jquery": "^2.1.1",
     "morgan": "^1.5.0",
     "serve-static": "^1.7.1",
