--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "matchdep": "^0.3.0",
     "mocha": "^2.0.1",
     "phantomjs": "^1.9",
+    "proxyquire": "^1.6.0",
     "sinon": "^1.12.1",
     "sinon-chai": "^2.6.0",
     "watchify": "^3.1.0"
