--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "angular": "./public/bower_components/angular/angular.js",
     "angular-resource": "./public/bower_components/angular-resource/angular-resource.js",
     "angular-route": "./public/bower_components/angular-route/angular-route.js",
-    "angular-loading-bar": "./public/bower_components/angular-loading-bar/build/loading-bar.js"
+    "angular-sanitize": "./public/bower_components/angular-sanitize/angular-sanitize.js",
+    "angular-loading-bar": "./public/bower_components/angular-loading-bar/build/loading-bar.js",
+    "ng-i18next": "./public/bower_components/ng-i18next/dist/ng-i18next.js"
   },
   "browserify-shim": "./shim.js"
 }
