--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "angular": "~1.4.0",
+    "angular-strap": "~2.3.1",
     "bootstrap": "~3.3.5",
     "angular-resource": "~1.4.0",
     "angular-route": "~1.4.0",
