--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,8 @@
   "private": true,
   "dependencies": {
     "angular": "~1.4.0",
+    "angular-animate": "~1.4.0",
+    "angular-motion": "~0.4.1",
     "angular-strap": "~2.3.1",
     "bootstrap": "~3.3.5",
     "angular-resource": "~1.4.0",
