--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "underscore": "~1.8.0"
   },
   "devDependencies": {
-    "bower": "1.4.x",
+    "bower": "1.5.x",
     "browserify": "^10.2.6",
     "browserify-ngannotate": "^1.0.1",
     "browserify-shim": "^3.8.0",
@@ -50,7 +50,7 @@
     "proxyquire": "^1.6.0",
     "sinon": "^1.12.1",
     "sinon-chai": "^2.6.0",
-    "watchify": "^3.1.0"
+    "watchify": "3.3.0"
   },
   "browser": {
     "bootstrap": "./public/bower_components/bootstrap/dist/js/bootstrap.js",
