--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,8 @@
     "angular-animate": "~1.4.0",
     "angular-motion": "~0.4.1",
     "angular-strap": "~2.3.1",
+    "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.3.5",
-    "angular-route": "~1.4.0",
     "angular-sanitize": "~1.4.0",
     "angular-loading-bar": "~0.8.0",
     "ng-i18next": "~0.5.2"
