--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "angular": "~1.4.0",
     "angular-animate": "~1.4.0",
+    "angular-message-format": "~1.4.0",
     "angular-motion": "~0.4.1",
     "angular-strap": "~2.3.1",
     "angular-ui-router": "~0.2.15",
