--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "bootstrap": "./public/bower_components/bootstrap/dist/js/bootstrap.js",
     "angular": "./public/bower_components/angular/angular.js",
     "angular-animate": "./public/bower_components/angular-animate/angular-animate.js",
+    "angular-message-format": "./public/bower_components/angular-message-format/angular-message-format.js",
     "ui.router": "./public/bower_components/angular-ui-router/release/angular-ui-router.js",
     "angular-sanitize": "./public/bower_components/angular-sanitize/angular-sanitize.js",
     "angular-strap": "./public/bower_components/angular-strap/dist/angular-strap.js",
