--- a/package.json
+++ b/package.json
@@ -53,14 +53,15 @@
     "watchify": "3.3.0"
   },
   "browser": {
-    "bootstrap": "./public/bower_components/bootstrap/dist/js/bootstrap.js",
     "angular": "./public/bower_components/angular/angular.js",
     "angular-animate": "./public/bower_components/angular-animate/angular-animate.js",
+    "angular-loading-bar": "./public/bower_components/angular-loading-bar/build/loading-bar.js",
     "angular-message-format": "./public/bower_components/angular-message-format/angular-message-format.js",
-    "ui.router": "./public/bower_components/angular-ui-router/release/angular-ui-router.js",
     "angular-sanitize": "./public/bower_components/angular-sanitize/angular-sanitize.js",
     "angular-strap": "./public/bower_components/angular-strap/dist/angular-strap.js",
-    "angular-loading-bar": "./public/bower_components/angular-loading-bar/build/loading-bar.js",
+    "angular-strap-templates": "./public/bower_components/angular-strap/dist/angular-strap.tpl.js",
+    "angular-ui-router": "./public/bower_components/angular-ui-router/release/angular-ui-router.js",
+    "bootstrap": "./public/bower_components/bootstrap/dist/js/bootstrap.js",
     "ng-i18next": "./public/bower_components/ng-i18next/dist/ng-i18next.js"
   },
   "browserify-shim": "./shim.js"
