--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "browser": {
     "angular": "./public/bower_components/angular/angular.js",
     "angular-animate": "./public/bower_components/angular-animate/angular-animate.js",
+    "angular-bootstrap": "./public/bower_components/angular-bootstrap/ui-bootstrap-tpls.js",
     "angular-loading-bar": "./public/bower_components/angular-loading-bar/build/loading-bar.js",
     "angular-message-format": "./public/bower_components/angular-message-format/angular-message-format.js",
     "angular-sanitize": "./public/bower_components/angular-sanitize/angular-sanitize.js",
