--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular": "~1.4.0",
     "angular-animate": "~1.4.0",
     "angular-bootstrap": "~0.13.4",
+    "angular-i18n": "~1.4.0",
     "angular-loading-bar": "~0.8.0",
     "angular-message-format": "~1.4.0",
     "angular-motion": "~0.4.1",
