--- a/bower.json
+++ b/bower.json
@@ -18,9 +18,9 @@
     "angular-motion": "~0.4.1",
     "angular-sanitize": "~1.4.0",
     "angular-strap": "~2.3.1",
-    "angular-ui-notification": "~0.0.14",
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.3.5",
-    "ng-i18next": "~0.5.2"
+    "ng-i18next": "~0.5.2",
+    "ng-ui-notif-brow": "~0.0.1"
   }
 }
