--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^1.9.0",
     "jade": "^1.3.1",
     "jquery": "^2.1.1",
+    "moment": "^2.10.6",
     "morgan": "^1.5.0",
     "serve-static": "^1.7.1",
     "underscore": "~1.8.0"
@@ -56,6 +57,7 @@
     "angular": "./public/bower_components/angular/angular.js",
     "angular-animate": "./public/bower_components/angular-animate/angular-animate.js",
     "angular-bootstrap": "./public/bower_components/angular-bootstrap/ui-bootstrap-tpls.js",
+    "angular-cookies": "./public/bower_components/angular-cookies/angular-cookies.js",
     "angular-loading-bar": "./public/bower_components/angular-loading-bar/build/loading-bar.js",
     "angular-message-format": "./public/bower_components/angular-message-format/angular-message-format.js",
     "angular-sanitize": "./public/bower_components/angular-sanitize/angular-sanitize.js",
@@ -64,6 +66,7 @@
     "angular-ui-notification": "./public/bower_components/ng-ui-notif-brow/dist/angular-ui-notification.js",
     "angular-ui-router": "./public/bower_components/angular-ui-router/release/angular-ui-router.js",
     "bootstrap": "./public/bower_components/bootstrap/dist/js/bootstrap.js",
+    "moment": "./node_modules/moment/min/moment-with-locales.js",
     "ng-i18next": "./public/bower_components/ng-i18next/dist/ng-i18next.js",
     "underscore": "./node_modules/underscore/underscore.js"
   },
