--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.3.5",
     "ng-i18next": "~0.5.2",
-    "ng-ui-notif-brow": "~0.0.1"
+    "ng-ui-notif-brow": "~0.0.1",
+    "ngInfiniteScroll": "~1.2.1"
   }
 }
