--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "angular-bootstrap": "./public/bower_components/angular-bootstrap/ui-bootstrap-tpls.js",
     "angular-cookies": "./public/bower_components/angular-cookies/angular-cookies.js",
     "angular-loading-bar": "./public/bower_components/angular-loading-bar/build/loading-bar.js",
+    "angular-masonry": "./public/bower_components/angular-masonry/angular-masonry.js",
     "angular-message-format": "./public/bower_components/angular-message-format/angular-message-format.js",
     "angular-sanitize": "./public/bower_components/angular-sanitize/angular-sanitize.js",
     "angular-strap": "./public/bower_components/angular-strap/dist/angular-strap.js",
@@ -66,6 +67,7 @@
     "angular-ui-notification": "./public/bower_components/angular-ui-notification/dist/angular-ui-notification.js",
     "angular-ui-router": "./public/bower_components/angular-ui-router/release/angular-ui-router.js",
     "bootstrap": "./public/bower_components/bootstrap/dist/js/bootstrap.js",
+    "masonry": "./public/bower_components/masonry/dist/masonry.pkgd.js",
     "moment": "./node_modules/moment/min/moment-with-locales.js",
     "ng-i18next": "./public/bower_components/ng-i18next/dist/ng-i18next.js",
     "ngInfiniteScroll": "./public/bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js",
