--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "dependencies": {
     "12factor-config": "^1.0.0",
+    "body-parser": "^1.14.1",
     "express": "4.x",
     "express-http-proxy": "^0.6.0",
     "i18next": "^1.9.0",
     "jade": "^1.3.1",
     "jquery": "^2.1.1",
+    "mailgun-js": "^0.7.7",
     "moment": "^2.10.6",
     "morgan": "^1.5.0",
     "serve-static": "^1.7.1",
