--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "12factor-config": "^1.0.0",
     "body-parser": "^1.14.1",
     "express": "4.x",
-    "express-http-proxy": "^0.6.0",
+    "http-proxy-middleware": "^0.9.0",
     "i18next": "^1.9.0",
     "jade": "^1.3.1",
     "jquery": "^2.1.1",
@@ -56,23 +56,23 @@
     "watchify": "3.3.0"
   },
   "browser": {
-    "angular": "./public/bower_components/angular/angular.js",
-    "angular-animate": "./public/bower_components/angular-animate/angular-animate.js",
-    "angular-bootstrap": "./public/bower_components/angular-bootstrap/ui-bootstrap-tpls.js",
-    "angular-cookies": "./public/bower_components/angular-cookies/angular-cookies.js",
-    "angular-loading-bar": "./public/bower_components/angular-loading-bar/build/loading-bar.js",
-    "angular-masonry": "./public/bower_components/angular-masonry/angular-masonry.js",
-    "angular-message-format": "./public/bower_components/angular-message-format/angular-message-format.js",
-    "angular-sanitize": "./public/bower_components/angular-sanitize/angular-sanitize.js",
-    "angular-strap": "./public/bower_components/angular-strap/dist/angular-strap.js",
-    "angular-strap-templates": "./public/bower_components/angular-strap/dist/angular-strap.tpl.js",
-    "angular-ui-notification": "./public/bower_components/angular-ui-notification/dist/angular-ui-notification.js",
-    "angular-ui-router": "./public/bower_components/angular-ui-router/release/angular-ui-router.js",
-    "bootstrap": "./public/bower_components/bootstrap/dist/js/bootstrap.js",
-    "masonry": "./public/bower_components/masonry/dist/masonry.pkgd.js",
+    "angular": "./server/public/bower_components/angular/angular.js",
+    "angular-animate": "./server/public/bower_components/angular-animate/angular-animate.js",
+    "angular-bootstrap": "./server/public/bower_components/angular-bootstrap/ui-bootstrap-tpls.js",
+    "angular-cookies": "./server/public/bower_components/angular-cookies/angular-cookies.js",
+    "angular-loading-bar": "./server/public/bower_components/angular-loading-bar/build/loading-bar.js",
+    "angular-masonry": "./server/public/bower_components/angular-masonry/angular-masonry.js",
+    "angular-message-format": "./server/public/bower_components/angular-message-format/angular-message-format.js",
+    "angular-sanitize": "./server/public/bower_components/angular-sanitize/angular-sanitize.js",
+    "angular-strap": "./server/public/bower_components/angular-strap/dist/angular-strap.js",
+    "angular-strap-templates": "./server/public/bower_components/angular-strap/dist/angular-strap.tpl.js",
+    "angular-ui-notification": "./server/public/bower_components/angular-ui-notification/dist/angular-ui-notification.js",
+    "angular-ui-router": "./server/public/bower_components/angular-ui-router/release/angular-ui-router.js",
+    "bootstrap": "./server/public/bower_components/bootstrap/dist/js/bootstrap.js",
+    "masonry": "./server/public/bower_components/masonry/dist/masonry.pkgd.js",
     "moment": "./node_modules/moment/min/moment-with-locales.js",
-    "ng-i18next": "./public/bower_components/ng-i18next/dist/ng-i18next.js",
-    "ngInfiniteScroll": "./public/bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js",
+    "ng-i18next": "./server/public/bower_components/ng-i18next/dist/ng-i18next.js",
+    "ngInfiniteScroll": "./server/public/bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js",
     "underscore": "./node_modules/underscore/underscore.js"
   },
   "browserify-shim": "./shim.js"
