--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "underscore": "~1.8.0"
   },
   "devDependencies": {
+    "bluebird": "^3.3.5",
     "bower": "1.7.x",
     "browserify": "^13.0.0",
     "browserify-ngannotate": "^2.0.0",
     "browserify-shim": "^3.8.0",
     "chai": "^3.0.0",
+    "chai-as-promised": "^5.3.0",
     "glob": "^7.0.3",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
@@ -47,7 +49,7 @@
     "grunt-contrib-uglify": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.1.2",
-    "grunt-mocha": "^0.4.11",
+    "grunt-mocha": "^1.0.1",
     "grunt-mocha-test": "^0.12.4",
     "jshint-stylish": "^2.0.0",
     "matchdep": "^1.0.0",
@@ -55,6 +57,7 @@
     "phantomjs": "^2.1.3",
     "proxyquire": "^1.6.0",
     "sinon": "^1.12.1",
+    "sinon-as-promised": "^4.0.0",
     "sinon-chai": "^2.6.0",
     "watchify": "3.3.0"
   },
