--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "i18next": "^1.9.0",
     "jade": "^1.3.1",
     "jquery": "^2.1.1",
+    "lodash": "^4.11.2",
     "mailgun-js": "^0.7.7",
     "moment": "^2.10.6",
     "morgan": "^1.5.0",
-    "serve-static": "^1.7.1",
-    "underscore": "~1.8.0"
+    "parse-link-header": "^0.4.1",
+    "serve-static": "^1.7.1"
   },
   "devDependencies": {
     "bluebird": "^3.3.5",
@@ -75,11 +76,12 @@
     "angular-ui-notification": "./server/public/bower_components/angular-ui-notification/dist/angular-ui-notification.js",
     "angular-ui-router": "./server/public/bower_components/angular-ui-router/release/angular-ui-router.js",
     "bootstrap": "./server/public/bower_components/bootstrap/dist/js/bootstrap.js",
+    "lodash": "./node_modules/lodash/index.js",
     "masonry": "./server/public/bower_components/masonry/dist/masonry.pkgd.js",
     "moment": "./node_modules/moment/min/moment-with-locales.js",
     "ng-i18next": "./server/public/bower_components/ng-i18next/dist/ng-i18next.js",
     "ngInfiniteScroll": "./server/public/bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js",
-    "underscore": "./node_modules/underscore/underscore.js"
+    "parse-link-header": "./node_modules/parse-link-header/index.js"
   },
   "browserify-shim": "./shim.js"
 }
