--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular": "~1.5.0",
     "angular-animate": "~1.5.0",
     "angular-bootstrap": "~0.13.4",
+    "angular-bootstrap-switch": "~0.5.0",
     "angular-cookies": "~1.5.0",
     "angular-i18n": "~1.5.0",
     "angular-loading-bar": "~0.8.0",
