--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "angular": "./server/public/bower_components/angular/angular.js",
     "angular-animate": "./server/public/bower_components/angular-animate/angular-animate.js",
     "angular-bootstrap": "./server/public/bower_components/angular-bootstrap/ui-bootstrap-tpls.js",
+    "angular-bootstrap-switch": "./server/public/bower_components/angular-bootstrap-switch/dist/angular-bootstrap-switch.js",
     "angular-cookies": "./server/public/bower_components/angular-cookies/angular-cookies.js",
     "angular-loading-bar": "./server/public/bower_components/angular-loading-bar/build/loading-bar.js",
     "angular-masonry": "./server/public/bower_components/angular-masonry/angular-masonry.js",
@@ -76,6 +77,7 @@
     "angular-ui-notification": "./server/public/bower_components/angular-ui-notification/dist/angular-ui-notification.js",
     "angular-ui-router": "./server/public/bower_components/angular-ui-router/release/angular-ui-router.js",
     "bootstrap": "./server/public/bower_components/bootstrap/dist/js/bootstrap.js",
+    "bootstrap-switch": "./server/public/bower_components/bootstrap-switch/dist/js/bootstrap-switch.js",
     "lodash": "./node_modules/lodash/index.js",
     "masonry": "./server/public/bower_components/masonry/dist/masonry.pkgd.js",
     "moment": "./node_modules/moment/min/moment-with-locales.js",
