Prepare release agoodfriendalwayspayshisdebts-webapp-1.0.4

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agoodfriendalwayspayshisdebts-webapp",
-  "version": "1.0.4-SNAPSHOT",
+  "version": "1.0.4",
   "description": "Web application for agoodfriendalwayspayshisdebts.com",
   "private": true,
   "repository": {
